force-app/main/default/objects/Operations_Metrics__c/Operations_Metrics__c.object-meta.xml
<CustomObject>
    <description>Used to track weekly Operations metrics that exist outside of Salesforce.</description>
    <label>Operations Metrics</label>
    <nameField>
        <label>Operations Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operations Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>