force-app/main/default/objects/Operations_Metrics__c/fields/ACH_No_Contracts_Agreements__c.field-meta.xml
<CustomField>
    <fullName>ACH_No_Contracts_Agreements__c</fullName>
    <description>ACH No Contracts/Agreements (Kotapay and Matrix)</description>
    <inlineHelpText>ACH No Contracts/Agreements (Kotapay and Matrix)</inlineHelpText>
    <label>ACH No Contracts/Agreements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>