force-app/main/default/objects/Operations_Metrics__c/fields/ACH_Pulls_Currency__c.field-meta.xml
<CustomField>
    <fullName>ACH_Pulls_Currency__c</fullName>
    <label>ACH Pulls ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>