force-app/main/default/objects/Operations_Metrics__c/fields/ACH_Rejects_Number__c.field-meta.xml
<CustomField>
    <fullName>ACH_Rejects_Number__c</fullName>
    <label>ACH Rejects (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>