force-app/main/default/objects/Operations_Metrics__c/fields/Active_Finch__c.field-meta.xml
<CustomField>
    <fullName>Active_Finch__c</fullName>
    <label>Active Finch (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>