force-app/main/default/objects/Operations_Metrics__c/fields/Advisor_Fee_Processing_Currency__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Fee_Processing_Currency__c</fullName>
    <label>Advisor Fee Processing ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>