force-app/main/default/objects/Operations_Metrics__c/fields/Cash_Out_of_Balances_Currency__c.field-meta.xml
<CustomField>
    <fullName>Cash_Out_of_Balances_Currency__c</fullName>
    <label>Cash Out of Balances ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>