force-app/main/default/objects/Operations_Metrics__c/fields/Cash_Out_of_Balances_Number__c.field-meta.xml
<CustomField>
    <fullName>Cash_Out_of_Balances_Number__c</fullName>
    <label>Cash Out of Balances (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>