force-app/main/default/objects/Operations_Metrics__c/fields/Distros_Completed_Last_Calendar_Week__c.field-meta.xml
<CustomField>
    <fullName>Distros_Completed_Last_Calendar_Week__c</fullName>
    <label>Distros Completed Last Calendar Week (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>