force-app/main/default/objects/Operations_Metrics__c/fields/EPS_Grand_Total_of_Active_plans__c.field-meta.xml
<CustomField>
    <fullName>EPS_Grand_Total_of_Active_plans__c</fullName>
    <label>EPS Grand Total # of Active plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>