force-app/main/default/objects/Operations_Metrics__c/fields/Fund_Out_of_Balances_Currency__c.field-meta.xml
<CustomField>
    <fullName>Fund_Out_of_Balances_Currency__c</fullName>
    <label>Fund Out of Balances ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>