force-app/main/default/objects/Operations_Metrics__c/fields/of_Clients_Using_Payroll_Integration__c.field-meta.xml
<CustomField>
    <fullName>of_Clients_Using_Payroll_Integration__c</fullName>
    <label># of Clients Using Payroll Integration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>