force-app/main/default/objects/Operations_Metrics__c/fields/Oldest_Unreconciled_Cash__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Unreconciled_Cash__c</fullName>
    <inlineHelpText>Year of oldest unreconciled cash.</inlineHelpText>
    <label>Oldest Unreconciled Cash</label>
    <length>4</length>
    <type>Text</type>
</CustomField>