force-app/main/default/objects/Operations_Metrics__c/fields/Outstanding_Deposits_Received__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Deposits_Received__c</fullName>
    <label>Outstanding Deposits Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>