force-app/main/default/objects/Operations_Metrics__c/fields/Payroll_Rejects_Over_3_Days__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Rejects_Over_3_Days__c</fullName>
    <label>Payroll Rejects Over 3 Days (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>