force-app/main/default/objects/Operations_Metrics__c/fields/Payroll_Submission_Tasks_Comleted__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Submission_Tasks_Comleted__c</fullName>
    <label>Payroll Submission Tasks Comleted (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>