force-app/main/default/objects/Operations_Metrics__c/fields/Payrolls_Awaiting_Funding__c.field-meta.xml
<CustomField>
    <fullName>Payrolls_Awaiting_Funding__c</fullName>
    <label>Payrolls Awaiting Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>