force-app/main/default/objects/Operations_Metrics__c/fields/Pending_Direct_Integration_Set_Ups__c.field-meta.xml
<CustomField>
    <fullName>Pending_Direct_Integration_Set_Ups__c</fullName>
    <label>Pending Direct Integration Set Ups</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>