force-app/main/default/objects/Operations_Metrics__c/fields/Pending_Trading__c.field-meta.xml
<CustomField>
    <fullName>Pending_Trading__c</fullName>
    <label>Pending Trading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>