force-app/main/default/objects/Operations_Metrics__c/fields/TPA_Fee_Processing_Currency__c.field-meta.xml
<CustomField>
    <fullName>TPA_Fee_Processing_Currency__c</fullName>
    <label>TPA Fee Processing ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>