force-app/main/default/objects/Operations_Metrics__c/fields/Trades_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Trades_Rejected__c</fullName>
    <label>Trades Rejected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>