force-app/main/default/objects/Operations_Metrics__c/fields/Trades_Submitted_Currency__c.field-meta.xml
<CustomField>
    <fullName>Trades_Submitted_Currency__c</fullName>
    <label>Trades Submitted ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>