force-app/main/default/objects/Operations_Metrics__c/fields/Trades_Submitted_Number__c.field-meta.xml
<CustomField>
    <fullName>Trades_Submitted_Number__c</fullName>
    <label>Trades Submitted (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>