force-app/main/default/objects/Operations_Metrics__c/fields/Week_End__c.field-meta.xml
<CustomField>
    <fullName>Week_End__c</fullName>
    <description>Date the reporting week ends</description>
    <inlineHelpText>Date the reporting week ends</inlineHelpText>
    <label>Week End</label>
    <type>Date</type>
</CustomField>