force-app/main/default/objects/Operations_Metrics__c/fields/Week_Start__c.field-meta.xml
<CustomField>
    <fullName>Week_Start__c</fullName>
    <description>Date the reporting week started</description>
    <inlineHelpText>Date the reporting week started</inlineHelpText>
    <label>Week Start</label>
    <type>Date</type>
</CustomField>