force-app/main/default/objects/Operations_Metrics__c/validationRules/Oldest_Unreconciled_Cash_Must_Be_a_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Oldest_Unreconciled_Cash_Must_Be_a_Year</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Oldest_Unreconciled_Cash__c ) != 4 &amp;&amp; NOT(ISBLANK(Oldest_Unreconciled_Cash__c ))</errorConditionFormula>
    <errorMessage>Please enter a 4 digit year, ex: 2023</errorMessage>
</ValidationRule>