force-app/main/default/objects/Operations_Metrics__c/listViews/Fin_Ops.listView-meta.xml
<ListView>
    <fullName>Fin_Ops</fullName>
    <booleanFilter>1 AND (2 OR 4) AND 3</booleanFilter>
    <columns>Week_End__c</columns>
    <columns>Cash_Out_of_Balances_Number__c</columns>
    <columns>Cash_Out_of_Balances_Currency__c</columns>
    <columns>Advisor_Fee_Processing_Number__c</columns>
    <columns>Advisor_Fee_Processing_Currency__c</columns>
    <columns>TPA_Fee_Processing_Number__c</columns>
    <columns>TPA_Fee_Processing_Currency__c</columns>
    <columns>Fund_Out_of_Balances_Number__c</columns>
    <columns>Fund_Out_of_Balances_Currency__c</columns>
    <columns>Trades_Submitted_Number__c</columns>
    <columns>Trades_Submitted_Currency__c</columns>
    <columns>Trades_Rejected__c</columns>
    <columns>Pending_Trading__c</columns>
    <columns>Oldest_Unreconciled_Cash__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Fin Ops</value>
    </filters>
    <filters>
        <field>Week_End__c</field>
        <operation>equals</operation>
        <value>LAST_N_WEEKS:4</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Operations_Metrics__c.Default</value>
    </filters>
    <filters>
        <field>Week_End__c</field>
        <operation>equals</operation>
        <value>11/4/2023</value>
    </filters>
    <label>Fin Ops</label>
</ListView>